# notion-agent-cli

./: .env.example  .gitignore  ARCHITECTURE.md  EVALUATION.md  LICENSE  README.md  biome.json  package-lock.json  package.json
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-commit
.github/workflows/: ci.yml
benchmark/: BENCHMARK.md  analysis.ipynb  analyze-behavior.mjs  check-setup.sh  cleanup-artifacts.mjs  fixture-reset.mjs  parse-sessions.mjs  pyproject.toml  run-full.sh  run.py  trigger-eval.json  validate-session.mjs
benchmark/assets/: summary-stats.json
benchmark/envs/: claude-actions  claude-mcp  setup-envs.sh
benchmark/fixtures/: bench-table.md  canonical-section.md
commands/: setup.md
hooks/: check-setup.sh  hooks.json  install-deps.sh
scripts/: actions.mjs  bump.mjs  setup.mjs
scripts/notion/: env.mjs  index.mjs  limiter.mjs
scripts/notion/actions/: NotionActions.mjs  analysis.mjs  batch.mjs  internal.mjs  read.mjs  safety.mjs  structural.mjs  write.mjs
scripts/notion/cli/: main.mjs  registry.mjs
scripts/notion/converters/: blocks.mjs  rich-text.mjs  tables.mjs
scripts/notion/docs/: generate-skill-docs.mjs
scripts/notion/helpers/: clone.mjs  ids.mjs  properties.mjs
skills/notion-agent-cli/: SKILL.md
skills/notion-agent-cli/references/: api-limits.md  (+2 more)
tests/property/: analysis.prop.mjs  cli.prop.mjs  converters.prop.mjs  helpers.prop.mjs  structural.prop.mjs
tests/unit/: actions.test.mjs  bugs.test.mjs  catalog.test.mjs  cli.test.mjs  converter.test.mjs  deepcopy.test.mjs  docs-gen.test.mjs  helpers.test.mjs
