[project]
name = "notion-skill-bench"
version = "0.1.0"
description = "Benchmark tooling for notion-skill"
requires-python = ">=3.12"
dependencies = [
    # CLI
    "typer>=0.15",
    # Notebook / analysis
    "pandas>=3.0",
    "plotly>=6.1",
    "numpy>=2.4",
    "ipykernel>=7.2",
    "jupyter>=1.1.1",
    "scipy>=1.15",
    "kaleido>=1.2.0",
]
